--- a/lesson-4-form/src/index.css
+++ b/lesson-4-form/src/index.css
@@ -18,9 +18,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 2px);
+  /* height: calc(100vh - 2px); */
   border: 1px solid mediumblue;
   margin:  auto;
+  height: 100vh;
+  width: 100%;
+  max-width: 500px;
 }
 
 header {
@@ -40,7 +43,7 @@ main {
   flex-grow: 1;
   justify-content: flex-start;
   align-items: center;
-  overflow-y: hidden;
+  overflow-y: scroll;
   
 }
 
