--- a/lesson-5-color-checker-project/src/index.css
+++ b/lesson-5-color-checker-project/src/index.css
@@ -1,13 +1,141 @@
-body {
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 36px;
 }
+
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.square {
+  width: 300px;
+  height: 300px;
+  border: 2px solid black;
+  display: grid;
+  place-content: center;
+  box-shadow: 2px 2px 5px #000;
+  border-radius: 0.25rem;
+}
+
+.square p {
+  text-align: center;
+  align-items: center;
+}
+
+form {
+  width: 400px;
+}
+
+label {
+  position: absolute;
+  left: -300px;
+}
+
+input[type="text"] {
+  margin-top: o.5rem;
+  padding: 0.25rem;
+  width: 100%;
+  font-size: 1rem;
+  box-shadow: 2px 2px 5px #000;
+  outline: none;
+  border-radius: 0.25rem;
+}
+
+button {
+  width: 100%;
+  min-height: 48px;
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  padding: 0.25rem;
+  
+}
+
+
+
+/* 
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  outline: none;
+}
+html {
+  overflow-y: scroll;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  scroll-behavior: smooth;
+  min-height: 100vh;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.squre {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 20px;
+  height: 50px;
+  border: 1px solid black;
+  padding: 25px 25px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6); 
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+form label {
+  position: absolute;
+  left: -99999px;
+}
+
+form input[type='text'] {
+  flex-grow: 1;
+  width: 250px;
+  max-width: 100%;
+  min-height: 38px;
+  font-size: 1rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+}
+
+button {
+  cursor: pointer;
+  height: 45px;
+  min-width: 100%;
+  background-color: gainsboro;
+  border-radius: 5px;
+  padding: 0.5rem;
+  font-size: 1.4rem;
+  box-shadow: 2px 4px rgba(0, 0, 0, 0.6);
+} */
