--- a/lesson-5-color-checker-project/src/index.css
+++ b/lesson-5-color-checker-project/src/index.css
@@ -15,8 +15,8 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
 }
 
 /* .app {
