--- a/lesson-5-color-checker-project/src/index.css
+++ b/lesson-5-color-checker-project/src/index.css
@@ -15,19 +15,26 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* height: 100vh;
-  width: 100vw; */
+  height: 100vh;
+  width: 100vw;
 }
 
-/* .app {
+
+.square {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-} */
+  gap: 0.2rem;
+  border: 2px solid black;
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  margin-bottom: 0.7rem;
+  box-shadow: 2px 2px 5px rgba(53, 55, 44, 0.7);
+}
 
-.square {
+/* .square {
   width: 300px;
   height: 300px;
   border: 2px solid black;
@@ -35,7 +42,7 @@ html {
   place-content: center;
   box-shadow: 2px 2px 5px #000;
   border-radius: 0.25rem;
-}
+} */
 
 .square p {
   text-align: center;
