--- a/lesson-10-react-router-dom/src/index.css
+++ b/lesson-10-react-router-dom/src/index.css
@@ -56,9 +56,13 @@ body {
 }
 
 .Footer {
+  max-width: 800px;
+  height: 100vh;
   padding: 0.75rem;
   display: grid;
   place-content: center;
+  background-color: #000;
+  color: #fff;
 }
 
 .Nav {
