--- a/lesson-10-react-router-dom/src/index.css
+++ b/lesson-10-react-router-dom/src/index.css
@@ -211,6 +211,7 @@ body {
   border-radius: 0.25rem;
   padding: 0.5rem;
   font-size: 1rem;
+  margin-right: 0.5rem;
   color: #fff;
   cursor: pointer;
 }
