--- a/lesson-14-use-callback/src/index.css
+++ b/lesson-14-use-callback/src/index.css
@@ -17,5 +17,5 @@ input[type="text"] {
   margin: 10px;
   border: 2px solid #333;
   border-radius: 5px;
-  font-size: 16px;
+  /* font-size: 16px; */
 }
