--- a/lesson-15-react-use-memo/src/index.css
+++ b/lesson-15-react-use-memo/src/index.css
@@ -11,7 +11,7 @@ html {
 body {
   /* background-color: #000; */
   color: #000000;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   width: 100vw;
   height: 100vh;
   border: 1px solid black;
